simple/test/features/errors/semantic/e1080_type_too_complex.spl
# E1080: Type Too Complex

Feature: E1080 - Type Complexity Limit Exceeded
  As a Simple compiler
  I want to detect when type complexity exceeds limits
  So that compilation performance is maintained

  Background:
    Given I have the Simple compiler

  Scenario: Deeply nested generic types
    When I compile:
      '''
      type Complex = Option<Option<Option<Option<Option<
                     Option<Option<Option<Option<Option<
                     Option<Option<i32>>>>>>>>>>>>
      '''
    Then I should see error E1080
    And the error message should be "type complexity limit exceeded"
    And the label should indicate "type too complex"
    And the help should suggest "simplify the type or use type aliases"

  Scenario: Valid type with aliases
    When I compile:
      '''
      type Inner = Option<i32>
      type Outer = Option<Inner>  # OK: using aliases
      '''
    Then compilation should succeed

  Scenario: Korean language error
    Given I set compiler language to "ko"
    When I compile:
      '''
      type VeryComplex = Vec<Vec<Vec<Vec<Vec<Vec<Vec<i32>>>>>>>
      '''
    Then I should see error E1080
    And the error message should contain "타입이 너무 복잡함"
